--- a/makefile.linux
+++ b/makefile.linux
@@ -25,7 +25,7 @@ clean:
 	rm -f nasu
 	rm -f *.o
 install:
-	mkdir /usr/share/games/nasu
+	mkdir -p /usr/share/games/nasu
 	mv nasu /usr/bin/nasu
 	cp gamedata/* /usr/share/games/nasu
 uninstall:
@@ -34,6 +34,6 @@ uninstall:
 reinstall:
 	rm -rf /usr/share/games/nasu
 	rm -f /usr/bin/nasu
-	mkdir /usr/share/games/nasu
+	mkdir -p /usr/share/games/nasu
 	mv nasu /usr/bin/nasu
 	cp gamedata/* /usr/share/games/nasu
